# sophys-cli-extensions

./: .gitignore  README.md  pyproject.toml
src/sophys/cli/extensions/ema/: DeviceSelector.qss  README.md  __init__.py  data_source.py  device_selector.py  input_processor.py  ipython_config.py  plans.py  run_engine.py
src/sophys/cli/extensions/ema/eds/: base.ui  device_selector.py  open_plugin_page.sh  widgets.py
src/sophys/cli/extensions/ipe/: __init__.py  plans.py
src/sophys/cli/extensions/sab/: __init__.py
src/sophys/cli/extensions/spe/: __init__.py  plans.py
src/sophys/cli/extensions/test/: __init__.py
tests/: conftest.py
tests/extensions/ema/: test_input_processor.py  test_plans.py  test_preprocessor.py
tests/test_data/: ema_input_processor_data_source.csv
