[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sophys-cli-extensions"
authors = [
  { name="Sofia Ferreira", email="sofia.ferreira@lnls.br" },
]
description = "Command-line support for sophys in SIRIUS beamlines."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
  "sophys-cli-core>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
ema = [
  "redis",
  "qtpy",
  "sophys-ema",
  "natsort==8.4.0"
]
spe = [
  "redis",
  "qtpy",
  "sophys-spe",
  "natsort==8.4.0"
]

sab = [
  "redis",
  "qtpy",
  "sophys-sab",
  "natsort==8.4.0"
]

all = [
  "sophys-cli-extensions[dev,ema,spe,sab]"
]

[tool.setuptools_scm]
version_file = "src/sophys/cli/extensions/__version__.py"

[tool.setuptools.packages.find]
where = ["src"]

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#flake8
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E704"]
